# acid-vst

./: .gitignore  CMakeLists.txt  README.md
presets/factory/: a-slot-run.acidpreset.json  acid-bass-init.acidpreset.json  bite-box.acidpreset.json  clean-init.acidpreset.json  deep-slide.acidpreset.json  delay-dub.acidpreset.json  fast-32.acidpreset.json  folded-silver.acidpreset.json  fuzz-rail.acidpreset.json  long-64-trip.acidpreset.json  mod-wet.acidpreset.json  pulse-acid.acidpreset.json  rubber-reso.acidpreset.json  space-tail.acidpreset.json  squelch-line.acidpreset.json  zap-circuit.acidpreset.json
presets/patterns/: README.md  factory-acid-bank.acidpattern.json
scripts/: build.ps1  clean-rebuild.ps1  install-user-assets.ps1  install-vst3.ps1  package-local.ps1  validate-vst3.ps1  verify-package.ps1
src/dsp/: AcidEngine.cpp  AcidEngine.h  EngineDescriptor.cpp  EngineDescriptor.h  Modulation.cpp  Modulation.h
src/model/: EngineControlBank.cpp  EngineControlBank.h  MidiPatternExporter.cpp  MidiPatternExporter.h  PatternBank.cpp  PatternBank.h
src/plugin/: PluginProcessor.cpp  PluginProcessor.h
src/ui/: AcidLookAndFeel.cpp  AcidLookAndFeel.h  EnergyStrip.cpp  EnergyStrip.h  MidiDragButton.cpp  MidiDragButton.h  PluginEditor.cpp  PluginEditor.h  StepGrid.cpp  StepGrid.h
tests/: DspSmokeTest.cpp
